changes alomst completed